salesforce_ant_45.0/sample/codepkg/objects/Product_Unit__c.object
<CustomObject>
    <fields>
        <fullName>Mongo_Id__c</fullName>
        <label>Mongo Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Product Units</relationshipLabel>
        <relationshipName>Product_Units</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sizes__c</fullName>
        <label>Sizes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Status</label>
        <type>Checkbox</type>
    </fields>
    <label>Product Unit</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Price__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Units_View</fullName>
        <columns>NAME</columns>
        <columns>Price__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>Units_View</label>
    </listViews>
    <nameField>
        <label>Product Units Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Units</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>